tests/yaml/snapshots/yaml__preprocessing_typo_detection__lets_typo.snap
---
source: tests/yaml/preprocessing_typo_detection.rs
expression: error_msg
---
Tag error: '!$lets' is not a valid iidy tag @ test.yaml:1:7 (errno: ERR_4001)
  -> check tag spelling or see documentation for valid tags

   For more info: iidy explain ERR_4001
