tests/yaml/snapshots/yaml__preprocessing_typo_detection__unknown_and_tag_detected.snap
---
source: tests/yaml/preprocessing_typo_detection.rs
expression: error_msg_and
---
Tag error: '!$and' is not a valid iidy tag @ test.yaml:1:11 (errno: ERR_4001)
  -> check tag spelling or see documentation for valid tags

   For more info: iidy explain ERR_4001
