tests/yaml/snapshots/yaml__preprocessing_typo_detection__unknown_iidy_tag_detection.snap
---
source: tests/yaml/preprocessing_typo_detection.rs
expression: error_msg
---
Tag error: '!$typo' is not a valid iidy tag @ test.yaml:2:12 (errno: ERR_4001)
  -> check tag spelling or see documentation for valid tags

   For more info: iidy explain ERR_4001
