tests/yaml/snapshots/yaml__preprocessing_typo_detection__unknown_or_tag_detected.snap
---
source: tests/yaml/preprocessing_typo_detection.rs
expression: error_msg_or
---
Tag error: '!$or' is not a valid iidy tag @ test.yaml:1:10 (errno: ERR_4001)
  -> check tag spelling or see documentation for valid tags

   For more info: iidy explain ERR_4001
